Add functionality to flatten multiple lists into a single list using streams