@@ -2,6 +2,8 @@ package com.practice.java8;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class
 
@@ -14,8 +16,19 @@ AddList {
                 Arrays.asList("React","Angular","Javascript"),
                 Arrays.asList("sql","Mysql","oracle"));
 
-        List<String> list1 = lists.stream().flatMap(list -> list.stream()).toList();
+        List<String> l1 = Arrays.asList("Java","Spring","SpringBoot");
+        List<String> l2 = Arrays.asList("React","Angular","Javascript");
+        List<String> l3 = Arrays.asList("sql","Mysql","oracle");
+
+
+        List<String> list1 = lists.stream().flatMap(List::stream).toList();
+
+       List<String> newList = Stream.of(l1,l2,l3).flatMap(List::stream).collect(Collectors.toList());
+
+        List<String> newList2 = Arrays.asList(l1,l2,l3).stream().flatMap(List::stream).collect(Collectors.toList());
 
         System.out.println(list1);
+        System.out.println(newList);
+        System.out.println(newList2);
     }
 }
